--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
         table {
             border: 1px solid lightgray;
             border-collapse: collapse;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+        }
+        th {
+            background-color: #808080;
+            color: white;
+            padding: 6px;
         }
         td {
             border: 1px solid lightgray;
