--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             border: 1px solid lightgray;
             border-collapse: collapse;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+            font-size: small;
         }
         th {
             background-color: #808080;
