--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-size: small;
         }
         th {
-            background-color: #332426;
+            background-color: #4b3538;
             color: white;
             padding: 6px;
         }
