--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         td:last-of-type {
             border-right: none;
         }
-        tr:last-of-type {
+        tr:last-of-type td {
             border-bottom: none;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+            background-color: #4b3538;
         }
         body {
             background-color: #130b07;
