--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <html>
-    <style>
-        table {
-            /*border: 1px solid lightgray;*/
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-            border-spacing: 1px;
-            font-size: small;
-        }
-        th {
-            background-color: #4b3538;
-            color: white;
-            padding: 6px;
-        }
-        /* round corners */
-        th:first-of-type {
-            border-top-left-radius: 10px;
-        }
-        th:last-of-type {
-            border-top-right-radius: 10px;
-        }
-        td {
-            /*border: 1px solid lightgray;*/
-            padding: 6px;
-            border-right: 1px solid rgb(0, 0, 0);
-            border-bottom: 1px solid rgb(0, 0, 0);
-        }
-        td:last-of-type {
-            border-right: none;
-        }
-        tr:last-of-type td {
-            border-bottom: none;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            background-color: #4b3538;
-        }
-        body {
-            background-color: #130b07;
-            color: white;
-            font-family: sans-serif;
-        }
-    </style>
-    <div id="addCharacterDiv"></div>    
-    <div id="characterTableDiv"></div>
-    <script src="wow-io.js"></script>
+    <body>
+        <style>
+            table {
+                /*border: 1px solid lightgray;*/
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+                border-spacing: 1px;
+                font-size: small;
+            }
+            th {
+                background-color: #4b3538;
+                color: white;
+                padding: 6px;
+            }
+            /* round corners */
+            th:first-of-type {
+                border-top-left-radius: 10px;
+            }
+            th:last-of-type {
+                border-top-right-radius: 10px;
+            }
+            td {
+                /*border: 1px solid lightgray;*/
+                padding: 6px;
+                border-right: 1px solid rgb(0, 0, 0);
+                border-bottom: 1px solid rgb(0, 0, 0);
+            }
+            td:last-of-type {
+                border-right: none;
+            }
+            tr:last-of-type td {
+                border-bottom: none;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                background-color: #4b3538;
+            }
+            body {
+                background-color: #130b07;
+                color: white;
+                font-family: sans-serif;
+            }
+        </style>
+        <div id="addCharacterDiv"></div>    
+        <div id="characterTableDiv"></div>
+        <script type="module" src="/src/wow-io.js"></script>
+    </body>
 </html>
