--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 padding: 6px;
             }
             /* round corners */
-            th:first-of-type {
+            th.rounded:first-of-type {
                 border-top-left-radius: 10px;
             }
-            th:last-of-type {
+            th.rounded:last-of-type {
                 border-top-right-radius: 10px;
             }
             td {
@@ -28,7 +28,7 @@
             td:last-of-type {
                 border-right: none;
             }
-            tr:last-of-type td {
+            tr.rounded:last-of-type td {
                 border-bottom: none;
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
