--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </style>
         <div id="addCharacterDiv"></div>    
         <div id="characterTableDiv"></div>
+        <div id="Notes"></div>
         <script type="module" src="/src/wow-io.js"></script>
     </body>
 </html>
