update paths again

--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
             <div id="characterTableDiv" class="characterTableDiv"></div>
             <div id="Notes" class="Notes"></div>
         </div>
-        <script type="module" src="/src/wow-io.js"></script>
+        <script type="module" src="src/wow-io.js"></script>
     </body>
 </html>
