--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             /* grid layout */
             .myGrid {
                 display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-columns: auto auto;
                 grid-template-rows: auto auto auto;
                 row-gap: 20px;
             }
@@ -61,15 +61,21 @@
                 grid-row: 2;
             }
             .Notes {
-                grid-column: 1 / 3;
+                grid-column: 1;
                 grid-row: 3;
+            }
+            .Admin {
+                grid-column: 2;
+                grid-row: 3;
+                justify-self: end;
             }
         </style>
         <div class="myGrid">
             <div id="addCharacterDiv" class="addCharacterDiv"></div>
             <div id="refreshDiv" class="refreshDiv"></div>
             <div id="characterTableDiv" class="characterTableDiv"></div>
-            <div id="Notes" class="Notes"></div>
+            <div id="NotesDiv" class="Notes"></div>
+            <div id="AdminDiv" class="Admin"></div>
         </div>
         <script type="module" src="src/wow-io.js"></script>
     </body>
