--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
                 box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
                 border-spacing: 1px;
                 font-size: small;
+                width: 100%;
             }
             th {
                 background-color: #4b3538;
@@ -43,7 +44,7 @@
             /* grid layout */
             .myGrid {
                 display: grid;
-                grid-template-columns: auto auto;
+                grid-template-columns: 40% 40%;
                 grid-template-rows: auto auto auto;
                 row-gap: 20px;
             }
