--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
                 grid-row: 3;
                 justify-self: end;
             }
+            .popup {
+                position: absolute;
+                width: 50%;
+                height: 50%;
+                left: 25%;
+                top: 10%;
+                text-align: center;
+                background-color: #4b3538;
+                border-radius: 5px;
+                box-shadow: 0 0 20px grey;
+                border: 5px;
+                border-color: #130b07;
+            }
         </style>
         <div class="myGrid">
             <div id="addCharacterDiv" class="addCharacterDiv"></div>
