--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 border-right: 1px solid rgb(0, 0, 0);
                 border-bottom: 1px solid rgb(0, 0, 0);
             }
+            tr:nth-of-type(even) {
+                background-color: #1b1315;
+            }
+            tr:hover {
+                background-color: #291d1e;
+            }
             td:last-of-type {
                 border-right: none;
             }
@@ -82,6 +88,7 @@
                 box-shadow: 0 0 20px grey;
                 border: 5px;
                 border-color: #130b07;
+                display: none;
             }
         </style>
         <div class="myGrid">
@@ -92,5 +99,11 @@
             <div id="AdminDiv" class="Admin"></div>
         </div>
         <script type="module" src="src/wow-io.js"></script>
+
+        <div id="importPopup" class="popup">
+            <h2>Import</h2>
+            <textarea id="importTextArea" rows="10" cols="50"></textarea>
+            <button id="importButton">Import</button>
+        </div>
     </body>
 </html>
