--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             /* grid layout */
             .myGrid {
                 display: grid;
-                grid-template-columns: 40% 40%;
+                grid-template-columns: 25% 25% 25%;
                 grid-template-rows: auto auto auto;
                 row-gap: 20px;
             }
@@ -58,13 +58,17 @@
                 grid-column: 1;
                 grid-row: 1;
             }
-            .refreshDiv {
+            .seasonDiv {
                 grid-column: 2;
+                grid-row: 1;
+            }
+            .refreshDiv {
+                grid-column: 3;
                 grid-row: 1;
                 justify-self: end;
             }
             .characterTableDiv {
-                grid-column: 1 / 3;
+                grid-column: 1 / 4;
                 grid-row: 2;
             }
             .Notes {
@@ -72,7 +76,7 @@
                 grid-row: 3;
             }
             .Admin {
-                grid-column: 2;
+                grid-column: 3;
                 grid-row: 3;
                 justify-self: end;
             }
@@ -80,30 +84,42 @@
                 position: absolute;
                 width: 50%;
                 height: 50%;
-                left: 25%;
-                top: 10%;
+                left: 15%;
+                top: 5%;
                 text-align: center;
                 background-color: #4b3538;
                 border-radius: 5px;
                 box-shadow: 0 0 20px grey;
                 border: 5px;
                 border-color: #130b07;
-                display: none;
+            }
+            .importTextArea {
+                position: absolute;
+                top: 10%;
+                left: 10%;
+                width: 80%;
+                height: 80%;
+                border: none;
+                border-radius: 5px;
+                resize: none;
+            }
+            .importCloseButton {
+                position: absolute;
+                left: 45%;
+                bottom: 2%;
+                height: 5%;
+                width: 10%;
+                border-radius: 5px;
             }
         </style>
         <div class="myGrid">
             <div id="addCharacterDiv" class="addCharacterDiv"></div>
+            <div id="seasonDiv" class="seasonDiv"></div>
             <div id="refreshDiv" class="refreshDiv"></div>
             <div id="characterTableDiv" class="characterTableDiv"></div>
             <div id="NotesDiv" class="Notes"></div>
             <div id="AdminDiv" class="Admin"></div>
         </div>
         <script type="module" src="src/wow-io.js"></script>
-
-        <div id="importPopup" class="popup">
-            <h2>Import</h2>
-            <textarea id="importTextArea" rows="10" cols="50"></textarea>
-            <button id="importButton">Import</button>
-        </div>
     </body>
 </html>
