--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 
                 table {
                     width: 80%;
+                    th, td {
+                        text-align: center;
+                        width: auto;
+                    }
                 }
             }
             .seasonDiv {
