--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
                 left: 15%;
                 top: 5%;
                 text-align: center;
-                background-color: #4b3538;
-                border-radius: 5px;
+                /*background-color: #4b3538;*/
+                background-color: #130b07;
+                border-radius: 10px;
                 box-shadow: 0 0 20px grey;
                 border: 5px;
                 border-color: #130b07;
+                overflow-y:auto;
             }
             .importTextArea {
                 position: absolute;
