--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 grid-row: 1;
 
                 table {
-                    width: 80%;
+                    width: 70%;
                     th, td {
                         text-align: center;
                         width: auto;
@@ -67,8 +67,18 @@
                 }
             }
             .seasonDiv {
-                grid-column: 2;
+                grid-column: 2 / 3;
                 grid-row: 1;
+                justify-items: center;
+
+                table {
+                    width: 50%;
+
+                    th, td {
+                        text-align: center;
+                        width: auto;
+                    }
+                }
             }
             .refreshDiv {
                 grid-column: 3;
@@ -76,7 +86,7 @@
                 justify-items: right;
 
                 table {
-                    width: 80%;
+                    width: 70%;
                     th, td {
                         text-align: center;
                         width: auto;
