--- a/index.html
+++ b/index.html
@@ -132,6 +132,16 @@
                 border: 5px;
                 border-color: #130b07;
                 overflow-y:auto;
+
+                .closeButton {
+                    position: absolute;
+                    right: 5;
+                    top: 5;
+                    border-radius: 5px;
+                    background-color: #4b3538;
+                    color: white;
+                    font-style: bold;
+                }
             }
             .importTextArea {
                 position: absolute;
